// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminNotificationsPageComponent should snap when notification edit form expanded 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded={[Function Boolean]}
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <i
        class="fas fa-plus"
      />
       Add New Notification 
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications are loading 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <i
        class="fas fa-plus"
      />
       Add New Notification 
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications failed to load 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  hasNotificationLoadingFailed={[Function Boolean]}
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <i
        class="fas fa-plus"
      />
       Add New Notification 
    </button>
  </div><tm-loading-retry>
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load data
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap with default view 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <i
        class="fas fa-plus"
      />
       Add New Notification 
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;
